I'm pretty close to a solid version 1.

--- a/.gitignore
+++ b/.gitignore
@@ -7,21 +7,15 @@ typings
 *.jsproj
 *.csproj
 *.sln
-dist
 .DS_Store
 .thumbsdb
 .ThumbsDB
 *.rdb
 *.log
 *.swp
-src/main.js
-src/logs/
-src/cache/
-*.log
-src/logs/*
+src/.js
 npm-debug*
+index.js
 *.map
-./index.js
-src/modules/
-src/archportal-interface
-
+build.js
+src/x-tag-autoscroll.js
